--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"express": "^4.19.2",
-		"module-alias": "^2.2.3",
 		"npm": "^10.8.1",
 		"pg": "^8.12.0",
 		"pg-hstore": "^2.3.4",
-		"sequelize": "^6.37.3"
+		"sequelize": "^6.37.3",
+		"umzug": "^3.8.2"
 	},
 	"type": "module"
 }
