update balance and add readme

--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 PORT=
 POSTGRES_PORT=
-POSTGRES_HOST=
-POSTGRES_DB=
+POSTGRES_HOST=balance-api-db
+POSTGRES_DB=balanceApiDB
 POSTGRES_USER=
 POSTGRES_PASSWORD=
